<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="@drawable/dialog_background">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameMaterial"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:hint="@string/nomi"
        android:paddingStart="10dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/measurementMaterial"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/measurementMaterial"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@id/nameMaterial"
        app:layout_constraintBottom_toTopOf="@id/priceMaterial"
        android:layout_margin="20dp"
        android:hint="@string/measurement"
        android:padding="10dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/priceMaterial"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintTop_toBottomOf="@id/measurementMaterial"
        app:layout_constraintBottom_toTopOf="@id/save"
        android:layout_margin="20dp"
        android:hint="@string/price"
        android:padding="10dp"
        android:inputType="number"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="#004d4d"
        android:onClick="addButtonClicked"
        android:text="@string/save"
        android:textAllCaps="false"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceMaterial" />



</androidx.constraintlayout.widget.ConstraintLayout>