<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/projectButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/loyhalar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/jobsButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/jobsButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/ishlar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/materialButton"
        app:layout_constraintTop_toBottomOf="@id/projectButton" />

    <Button
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/materialar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>