<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.jobs.read.JobReadFragment"
    android:layout_gravity="center_vertical"
    android:background="@drawable/dialog_background"
    android:layout_marginHorizontal="20dp"
    android:padding="20dp">

    <TextView
        android:id="@+id/jobNameRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/measurementJobRead"
        android:textColor="@color/white"
        android:padding="1dp"
        tools:text="@string/name"
        />
    <TextView
        android:id="@+id/measurementJobRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/jobNameRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/priceJobRead"
        android:textSize="20sp"
        android:padding="1dp"
        android:textColor="@color/white"
        tools:text="@string/measurement"
        app:layout_constraintHorizontal_bias="0"/>
    <TextView
        android:id="@+id/priceJobRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/measurementJobRead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/turiJob"
        tools:text="@string/price"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="1dp"/>
    <TextView
        android:id="@+id/turiJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/priceJobRead"
        app:layout_constraintBottom_toTopOf="@id/jobRecycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:padding="1dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        tools:text="3"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/jobRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/turiJob"
        app:layout_constraintBottom_toTopOf="@id/jobFlow"
        tools:itemCount="4"
        tools:listitem="@layout/item_jobs"
        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/jobFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/jobRecycler"
        app:constraint_referenced_ids="jobCalcBtn,jobEditBtn,jobDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:flow_wrapMode="chain"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/jobCalcBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/hisoblash"
        app:cornerRadius="15dp"
        android:backgroundTint="@color/button_color"
        android:textAllCaps="false"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/jobEditBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:cornerRadius="15dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/edit"
        android:textAllCaps="false"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/jobDelete"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:cornerRadius="15dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/button_color"
        android:text="@string/delete"/>



</androidx.constraintlayout.widget.ConstraintLayout>