<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.projects.insert.ProjectInsertFragment"
    android:background="@drawable/dialog_background"
    android:layout_marginHorizontal="20dp"
    android:layout_gravity="center"
    android:maxHeight="600dp"
    android:padding="20dp">

    <EditText
        android:id="@+id/projectInsertName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/projectRecycler"
        android:background="@drawable/edittext_background"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:hint="@string/nomi"
        android:paddingHorizontal="10dp"
        android:gravity="center_vertical"
        android:inputType="text"
        android:elevation="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projectRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/flowProject"
        app:layout_constraintTop_toBottomOf="@id/projectInsertName"
        tools:itemCount="4"
        tools:layout_editor_absoluteX="20dp"
        tools:listitem="@layout/item_jobs"
        app:layout_constraintHeight_max="400dp"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="projectSave,addJob,deleteJob"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/projectRecycler" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/projectSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/save"
        android:backgroundTint="@color/button_color"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/ish_qo_shish"
        android:textAllCaps="false"
        android:backgroundTint="@color/button_color"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ish_o_chirish"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        android:visibility="gone"
        android:backgroundTint="@color/button_color"
        />

</androidx.constraintlayout.widget.ConstraintLayout>