<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_background"
        android:padding="10dp">

        <EditText
            android:id="@+id/jobName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:gravity="center_vertical"
            android:hint="@string/nomi"
            android:paddingStart="10dp"
            android:textColor="@color/black"

            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/measurementJob"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/measurementJob"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/measurement"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/jobPrice"
            app:layout_constraintTop_toBottomOf="@id/jobName" />

        <EditText
            android:id="@+id/jobPrice"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"
            android:gravity="center_vertical"
            android:hint="@string/price"
            android:inputType="number"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/textView"
            app:layout_constraintTop_toBottomOf="@id/measurementJob" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:text="@string/nechta_o_lchamli_ekanlikini_tanlang"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobPrice" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:checkedButton="@id/radioButton"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/jobsAddRecycler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/jobsAddRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@id/materialAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="180dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            tools:itemCount="4"
            tools:layout_editor_absoluteX="-1dp"
            tools:listitem="@layout/item_jobs" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialAdd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/material_qo_shish"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@id/jobsSaveBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jobsAddRecycler" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/jobsSaveBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialAdd" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
