<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.projects.read.ProjectReadFragment"
    android:layout_marginHorizontal="20dp"
    android:padding="20dp"
    android:layout_marginVertical="20dp"
    android:background="@drawable/dialog_background"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/projectNameRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/priceProjectRead"
        android:textColor="@color/white"
        android:padding="1dp"
        tools:text="@string/name"
        />
    <TextView
        android:id="@+id/priceProjectRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/projectNameRead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/projectRecyclerRead"
        tools:text="@string/price"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="1dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projectRecyclerRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/priceProjectRead"
        app:layout_constraintBottom_toTopOf="@id/projectFlow"
        tools:itemCount="0"
        app:layout_constraintHeight_max="250dp"
        android:layout_marginVertical="5dp"
        tools:listitem="@layout/item_jobs"
        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/projectFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/projectRecyclerRead"
        app:constraint_referenced_ids="projectDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="10dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/projectDelete"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        app:cornerRadius="15dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/button_color"
        android:text="@string/delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>